--- a/public/styles/welcome.css
+++ b/public/styles/welcome.css
@@ -9,16 +9,20 @@ body {
     color: #595a59;
     font-family: "Helvetica", sans-serif;
     font-weight: lighter;
-    font-size: 14px;
+    font-size: 0.9rem;
+}
+
+.container {
+    position: relative;
 }
 
 .wrapper {
-    position: relative;
-    top: 10%;
-    transform: translate(50%, -40%);
-    -webkit-transform: translate(50%, 40%);
-    text-align: center;
-    width: 50%;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    transform: translate(-50%, -10%);
+    -webkit-transform: translate(-50%, 10%);
+
 }
 
 a {
